code/python/SecurityExplanation/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Security Explanation client library for Python

[![API Version](https://img.shields.io/badge/api-v1.6.0-blue)](https://developer.factset.com/api-catalog/security-explanation-api)
[![PyPi](https://img.shields.io/pypi/v/fds.sdk.SecurityExplanation/3.0.0)](https://pypi.org/project/fds.sdk.SecurityExplanation/v/3.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to use Security Explanation through APIs.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.6.0
- SDK version: 3.0.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Python >= 3.7

## Installation

### Poetry

```shell
poetry add fds.sdk.utils fds.sdk.SecurityExplanation==3.0.0
```

### pip

```shell
pip install fds.sdk.utils fds.sdk.SecurityExplanation==3.0.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Python environment.
   1. Install and activate python 3.10+. If you're using [pyenv](https://github.com/pyenv/pyenv):

      ```sh
      pyenv install 3.10.0
      pyenv shell 3.10.0
      ```

   2. (optional) [Install poetry](https://python-poetry.org/docs/#installation).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```python
from fds.sdk.utils.authentication import ConfidentialClient

import fds.sdk.SecurityExplanation
from fds.sdk.SecurityExplanation.api import security_explanation_api
from fds.sdk.SecurityExplanation.models import *
from dateutil.parser import parse as dateutil_parser
from pprint import pprint

# See configuration.py for a list of all supported configuration parameters.

# Examples for each supported authentication method are below,
# choose one that satisfies your use case.

# (Preferred) OAuth 2.0: FactSetOAuth2
# See https://github.com/FactSet/enterprise-sdk#oauth-20
# for information on how to create the app-config.json file
#
# The confidential client instance should be reused in production environments.
# See https://github.com/FactSet/enterprise-sdk-utils-python#authentication
# for more information on using the ConfidentialClient class
configuration = fds.sdk.SecurityExplanation.Configuration(
    fds_oauth_client=ConfidentialClient('/path/to/app-config.json')
)

# Basic authentication: FactSetApiKey
# See https://github.com/FactSet/enterprise-sdk#api-key
# for information how to create an API key
# configuration = fds.sdk.SecurityExplanation.Configuration(
#     username='USERNAME-SERIAL',
#     password='API-KEY'
# )

# Enter a context with an instance of the API client
with fds.sdk.SecurityExplanation.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = security_explanation_api.SecurityExplanationApi(api_client)
    id = "80931ca92c7b432380dcd51f539c79f5" # str | id

    try:
        # Get explanation status by id
        # example passing only required values which don't have defaults set
        api_response_wrapper = api_instance.check_explanation_status(id)

        # This endpoint returns a response wrapper that contains different types of responses depending on the query.
        # To access the correct response type, you need to perform one additional step, as shown below.
        if api_response_wrapper.get_status_code() == 201:
            api_response = api_response_wrapper.get_response_201()
        if api_response_wrapper.get_status_code() == 202:
            api_response = api_response_wrapper.get_response_202()

        pprint(api_response)
    except fds.sdk.SecurityExplanation.ApiException as e:
        print("Exception when calling SecurityExplanationApi->check_explanation_status: %s\n" % e)

    # # Get response, http status code and response headers
    # try:
    #     # Get explanation status by id
    #     api_response_wrapper, http_status_code, response_headers = api_instance.check_explanation_status_with_http_info(id)

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 201:
    #         api_response = api_response_wrapper.get_response_201()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.SecurityExplanation.ApiException as e:
    #     print("Exception when calling SecurityExplanationApi->check_explanation_status: %s\n" % e)

    # # Get response asynchronous
    # try:
    #     # Get explanation status by id
    #     async_result = api_instance.check_explanation_status_async(id)
    #     api_response_wrapper = async_result.get()

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 201:
    #         api_response = api_response_wrapper.get_response_201()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    # except fds.sdk.SecurityExplanation.ApiException as e:
    #     print("Exception when calling SecurityExplanationApi->check_explanation_status: %s\n" % e)

    # # Get response, http status code and response headers asynchronous
    # try:
    #     # Get explanation status by id
    #     async_result = api_instance.check_explanation_status_with_http_info_async(id)
    #     api_response_wrapper, http_status_code, response_headers = async_result.get()

    #     # This endpoint returns a response wrapper that contains different types of responses depending on the query.
    #     # To access the correct response type, you need to perform one additional step, as shown below.
    #     if api_response_wrapper.get_status_code() == 201:
    #         api_response = api_response_wrapper.get_response_201()
    #     if api_response_wrapper.get_status_code() == 202:
    #         api_response = api_response_wrapper.get_response_202()

    #     pprint(api_response)
    #     pprint(http_status_code)
    #     pprint(response_headers)
    # except fds.sdk.SecurityExplanation.ApiException as e:
    #     print("Exception when calling SecurityExplanationApi->check_explanation_status: %s\n" % e)

```

### Using Pandas

To convert an API response to a Pandas DataFrame, it is necessary to transform it first to a dictionary.
```python
import pandas as pd

response_dict = api_response.to_dict()['data']

simple_json_response = pd.DataFrame(response_dict)
nested_json_response = pd.json_normalize(response_dict)
```

### Debugging

The SDK uses the standard library [`logging`](https://docs.python.org/3/library/logging.html#module-logging) module.

Setting `debug` to `True` on an instance of the `Configuration` class sets the log-level of related packages to `DEBUG`
and enables additional logging in Pythons [HTTP Client](https://docs.python.org/3/library/http.client.html).

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```python
import logging
import fds.sdk.SecurityExplanation

logging.basicConfig(level=logging.DEBUG)

configuration = fds.sdk.SecurityExplanation.Configuration(...)
configuration.debug = True
```

### Configure a Proxy

You can pass proxy settings to the Configuration class:

* `proxy`: The URL of the proxy to use.
* `proxy_headers`: a dictionary to pass additional headers to the proxy (e.g. `Proxy-Authorization`).

```python
import fds.sdk.SecurityExplanation

configuration = fds.sdk.SecurityExplanation.Configuration(
    # ...
    proxy="http://secret:password@localhost:5050",
    proxy_headers={
        "Custom-Proxy-Header": "Custom-Proxy-Header-Value"
    }
)
```

### Custom SSL Certificate

TLS/SSL certificate verification can be configured with the following Configuration parameters:

* `ssl_ca_cert`: a path to the certificate to use for verification in `PEM` format.
* `verify_ssl`: setting this to `False` disables the verification of certificates.
  Disabling the verification is not recommended, but it might be useful during
  local development or testing.

```python
import fds.sdk.SecurityExplanation

configuration = fds.sdk.SecurityExplanation.Configuration(
    # ...
    ssl_ca_cert='/path/to/ca.pem'
)
```

### Request Retries

In case the request retry behaviour should be customized, it is possible to pass a `urllib3.Retry` object to the `retry` property of the Configuration.

```python
from urllib3 import Retry
import fds.sdk.SecurityExplanation

configuration = fds.sdk.SecurityExplanation.Configuration(
    # ...
)

configuration.retries = Retry(total=3, status_forcelist=[500, 502, 503, 504])
```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/security-explanation/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*SecurityExplanationApi* | [**check_explanation_status**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationApi.md#check_explanation_status) | **GET** /explanation/{id}/status | Get explanation status by id
*SecurityExplanationApi* | [**create_explanation**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationApi.md#create_explanation) | **POST** /explanation | Request explanation
*SecurityExplanationApi* | [**fetch_explanation_results**](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationApi.md#fetch_explanation_results) | **GET** /explanation/{id}/result | Get explanation results by id


## Documentation For Models

 - [APIClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/APIClientErrorResponse.md)
 - [APIError](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/APIError.md)
 - [BrokerResearchSummary](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/BrokerResearchSummary.md)
 - [ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/ErrorSource.md)
 - [ExplanationCreateResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/ExplanationCreateResponse.md)
 - [ExplanationCreateResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/ExplanationCreateResponseRoot.md)
 - [ExplanationStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/ExplanationStatus.md)
 - [ExplanationStatusRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/ExplanationStatusRoot.md)
 - [SecurityExplanationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationParametersRoot.md)
 - [SecurityExplanationRequestParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationRequestParameters.md)
 - [SecurityExplanationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationResponse.md)
 - [SecurityExplanationResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/python/SecurityExplanation/v1/docs/SecurityExplanationResponseRoot.md)


## Documentation For Authorization


## FactSetApiKey

- **Type**: HTTP basic authentication


## FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Notes for Large OpenAPI documents
If the OpenAPI document is large, imports in fds.sdk.SecurityExplanation.apis and fds.sdk.SecurityExplanation.models may fail with a
RecursionError indicating the maximum recursion limit has been exceeded. In that case, there are a couple of solutions:

Solution 1:
Use specific imports for apis and models like:
- `from fds.sdk.SecurityExplanation.api.default_api import DefaultApi`
- `from fds.sdk.SecurityExplanation.model.pet import Pet`

Solution 2:
Before importing the package, adjust the maximum recursion limit as shown below:
```
import sys
sys.setrecursionlimit(1500)
import fds.sdk.SecurityExplanation
from fds.sdk.SecurityExplanation.apis import *
from fds.sdk.SecurityExplanation.models import *
```

## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

